# ArcticOceanCO2-GRL

./: .cruft.json  .gitignore  CITATION.cff  Makefile  README.md  config.toml  config.yaml  environment.yml  pyproject.toml  requirements.txt
assets/arctic-regions/: arctic-regions.dbf  arctic-regions.shp  arctic-regions.shx
assets/mpl_styles/: white_paper.mplstyle
docs/: _config.yml  index.md
notebooks/: jupyter_startup.ipy
scripts/: 01-test.py  figure_1.py  figure_2.py  figure_3.py  figure_4.py  figure_aux_data_gaps.py
src/: __init__.py  submodule.py
src/core/: __init__.py  utils.py
src/helper/: coordinates.py  datahandling.py  graphics.py
src/tests/: conftest.py  test_submodule.py
